# purr

./: .gitignore  Cargo.toml  Dioxus.toml  IMPLEMENTATION_PLAN.md  Makefile  README.md  build.ps1
.cargo/: config.toml
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/src/views/: mod.rs
purr/: Cargo.toml
purr-core/: Cargo.toml
purr-core/src/: audio.rs  config.rs  dev.rs  error.rs  gpu.rs  lib.rs  math.rs  model.rs  simple_audio.rs  transcription.rs
purr-core/src/whisper/: logging.rs  mod.rs  streaming.rs  sync.rs
purr-core/tests/: integration_tests.rs  slow_tests.rs
purr/src/: fmt.rs  main.rs
purr/tests/: integration_tests.rs
samples/: jfk.opus
ui/: Cargo.toml
ui/src/: echo.rs  hero.rs  lib.rs  transcription.rs
web/: Cargo.toml  Dioxus.toml
web/src/: main.rs
web/src/views/: home.rs  transcription.rs
whisper-ui-cli/: Cargo.toml
whisper-ui-cli/src/: fmt.rs  main.rs
whisper-ui-cli/tests/: integration_tests.rs
whisper-ui-core/: Cargo.toml
whisper-ui-core/src/: audio.rs  config.rs  lib.rs  model.rs  simple_audio.rs  transcription.rs
whisper-ui-core/tests/: integration_tests.rs  slow_tests.rs
