[workspace]
members = ["purr", "purr-core", "ui", "web", "desktop", "mobile", "api"]
resolver = "2"


[workspace.dependencies]
purr-core = { path = "purr-core" }
dioxus = { version = "0.6.0" }

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
