[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
purr-core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt"] }
tracing = "0.1"

[features]
default = []
server = []
