[package]
name = "purr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Whisper.cpp bindings
whisper-rs = { version = "0.14", features = ["tracing_backend", "raw-api"] }

ffmpeg-next = { version = "7.0", features = ["codec", "format"] }

# FFmpeg bindings for audio processing
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1.41"

# XDG directory support
directories = "5.0"

# HTTP client for model downloading
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
strum = { version = "0.27.1", features = ["derive"] }
tokio-stream = "0.1.17"

[dev-dependencies]
tempfile = "3.8"
rstest = "0.18"
pretty_assertions = "1.4.1"

[features]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
metal = ["whisper-rs/metal"]
coreml = ["whisper-rs/coreml"]
