[package]
name = "purr"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core library
purr-core.workspace = true

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization for output
serde_json = "1.0"

# Logging
tracing = "0.1.41"

# Colored output
owo-colors = "4.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-core = "0.1.34"
num_cpus = "1.17.0"
tracing-log = "0.2.0"
anyhow = "1.0.98"

# Dioxus UI framework
dioxus = "0.6.0"
dioxus-desktop = "0.6.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
rstest = "0.18"

[features]
cuda = ["purr-core/cuda"]
vulkan = ["purr-core/vulkan"]
metal = ["purr-core/metal"]
coreml = ["purr-core/coreml"]
