[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
api = { workspace = true, optional = true }

# Core transcription - only for server builds
purr-core = { workspace = true, optional = true }

# File handling and async  
tokio = { version = "1.0", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Platform-specific features (optional dependencies)
rfd = { version = "0.15.0", optional = true }
copypasta = { version = "0.10.1", optional = true }

[features]
default = []
desktop = ["rfd", "copypasta", "purr-core", "api"]
server = ["purr-core", "api"]
web = []
mobile = []
