[package]
name = "whisper-ui-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core library
whisper-ui-core = { path = "../whisper-ui-core" }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization for output
serde_json = "1.0"

# Logging
tracing = "0.1.41"

# Colored output
owo-colors = "4.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-core = "0.1.34"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
rstest = "0.18"
