[package]
name = "whisper-ui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Whisper.cpp bindings
whisper-rs = "0.12"

# FFmpeg bindings for audio processing
ffmpeg-next = "7.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Path handling
path-absolutize = "3.1"

[dev-dependencies]
tempfile = "3.8"
