[package]
name = "whisper-ui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Whisper.cpp bindings
whisper-rs = "0.14"

ffmpeg-next = { version = "7.0", features = [] }

# FFmpeg bindings for audio processing
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Path handling
path-absolutize = "3.1"

# XDG directory support
directories = "5.0"

# HTTP client for model downloading
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.8"
rstest = "0.18"
